tests/invalid_programs/function1.jas
// Expect function name.

fn () -> i32 { return 42; }
